# AITourGuide

./: .env.example  .gitignore  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  config.py  cv_middle.md  datasphere_extra_requirements.txt  main.py  pyproject.toml  report.html  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci-cd.yml
calib_bundle/: calib.json
config/: base.yaml  development.yaml  production.yaml
docker/: Dockerfile  Dockerfile.sglang  docker-compose.yml  torchao_utils.patch.py
docker/grafana/dashboards/: aitourguide.json  logs.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: loki.yml  tempo.yml
docker/loki/: loki.yaml
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yaml
docker/tempo/: tempo.yaml
docs/: API.md  ARCHITECTURE.md  MODEL_SELECTION.md
docs/examples/: python_client.py
experiments/: README.md  create_hard_unknown_test.py  e2e_eval.py  e2e_eval_v2.py  eval.py  evaluate_production_unknown.py  exp.ipynb  export_model_awq.py  find_th_and_recompute_metrics.py  plotting.py  test_hf_model.py  threshold_sweep_and_plot.py  train.py  train_config.py
experiments/results/: val_rerank_exp_r16_alpha32_lr2e-5_rerank_full_lora_448_dataset_v3.json  val_rerank_exp_r8_alpha16_lr2e-5_rerank_attn_and_mlp_module.json
rag/: clip_index.meta.pkl  dataset.py  evaluate_retrieval.py  multimodal_reranker.py  retriever.py
scripts/data_preparation/: add_image_path.ipynb  add_ru_name.py  build_unknown_sets.py  download_dataset_s3.py  step1_search_description.py  step2_download_images.py  step3_text_filter.py  step4_image_filter.py  step4a_validate_images.py  step4b_generate_captions.py  step4c_summarise_captions.py  step5_generate_guide_descriptions_yandex.py  step6_setup_dataset.py  upload_dataset_s3.py
scripts/experiments/: DATA_FORMAT.md  README.md  ablation_text_leakage.py  add_ru_name.py  build_calib_bundle.py  build_unknown_sets.py  calibrate_and_select.py  calibration.py  compare_metrics_with_ci.py  create_hard_unknown_test.py  e2e_eval.py  e2e_eval_v2.py  eval.py  evaluate_production_unknown.py  export_model_for_production.py  find_baseline_threshold.py  find_th_and_recompute_metrics.py  plotting.py  quantize_gptq_qwen2vl.py  ranking_ci.py  recompute_e2e_metrics.py  test_gguf_model.py  test_hf_model.py  threshold_sweep_and_plot.py  train.py
scripts/experiments/quantize/: build_calib_bundle.py  quantize_awq_qwen2vl.py  quantize_gguf_qwen2vl.py  quantize_gptq_qwen2vl.py  test_gguf_model.py  test_hf_model.py
scripts/experiments/results/: production_unknown_results.json  ranking_results.json  val_eval_results.json  val_rerank_exp_r16_alpha32_lr1e-5_rerank_attn_and_mlp_module_r16.json  val_rerank_exp_r16_alpha32_lr2e-5_dinov2_rerank_attn_448.json  val_rerank_exp_r16_alpha32_lr2e-5_rerank_attn_module_balanced.json  val_rerank_exp_r16_alpha32_lr2e-5_rerank_full_lora_448.json
scripts/experiments/results/e2e pipline/: calibration_best_lora.json  calibration_lora.json  calibration_zero_shot.json  e2e_results_baseline_novel.json  e2e_results_best_lora_novel.json
scripts/experiments/results/e2e_pipline/: calibration_best_lora.json  calibration_zero_shot.json  e2e_results_zero_shot_novel.json  e2e_val_results_baseline_novel.json  e2e_val_results_best_lora_novel.json  e2e_val_results_zero_shot_novel.json
scripts/experiments/results/eval/: val_rerank_exp_r16_alpha32_lr2e-5_rerank_attn_448.json
scripts/setup/: download_clip_model.py  download_siglip_model.py
services/: ai_tour_guide.py  translator.py  yandex_search.py
setup_data_v3/: add_image_path.ipynb  clean_dataset.py  download_images.py  search_description.py  setup_dataset.py  step1_text_filter.py  step2_image_filter.py  step3_text_filter.py  step4_5_generate_guide_descriptions.py  step4_image_filter.py  upload_dataset_s3.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/routes/: __init__.py  frontend.py  gallery.py  health.py  info.py  metrics.py  predict.py
src/api/static/css/: styles.css
src/api/static/js/: app.js
src/api/templates/: index.html
src/core/: config.py  logging.py  metrics.py  tracing.py
src/rag/: dataset.py  evaluate_retrieval.py  indexing.py  indexing_v2.py  landmark_retriever.py  retriever.py
src/services/: ai_tour_guide.py  calibration.py  image_utils.py  internet_search.py  scoring.py  search_filters.py  translator.py  vllm_client.py  yandex_search.py
tests/: conftest.py  example_usage.py  test_internet_search.ipynb
tests/integration/: test_api.py
tests/load/: locustfile.py
tests/load/results/: report.html  report_failures.csv  report_stats.csv  report_stats_history.csv
tests/unit/: test_ai_tour_guide.py  test_calibration.py  test_config.py  test_internet_search.py  test_predict.py  test_retriever.py  test_scoring.py
