[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tour-guide"
version = "1.0.0"
description = "AI-powered landmark recognition and tour guide service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anastasia Slesarenko", email = "slesarenko221999@gmail.com"}
]
keywords = ["ai", "computer-vision", "landmark-recognition", "rag", "vlm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Anastasia-Slesarenko/AITourGuide"
Documentation = "https://github.com/Anastasia-Slesarenko/AITourGuide/tree/main/docs"
Repository = "https://github.com/Anastasia-Slesarenko/AITourGuide"
Issues = "https://github.com/Anastasia-Slesarenko/AITourGuide/issues"

[tool.setuptools]
packages = ["src"]

# ========================================
# PYTEST CONFIGURATION
# ========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gpu: marks tests that require GPU",
    "requires_api_keys: marks tests that require API keys",
]
asyncio_mode = "auto"

# ========================================
# MYPY CONFIGURATION
# ========================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
# Исключаем скрипты и эксперименты — там нет строгой типизации
exclude = [
    "scripts/",
    "tests/load/",
]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "faiss.*",
    "llama_cpp.*",
    "PIL.*",
    "requests.*",
    "aiohttp.*",
    "cachetools.*",
    "locust.*",
    "mlflow.*",
    "peft.*",
    "datasets.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "boto3.*",
    "botocore.*",
    "qwen_vl_utils.*",
    "sentencepiece.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# ========================================
# COVERAGE CONFIGURATION
# ========================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "scripts/experiments/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ========================================
# RUFF CONFIGURATION (ruff >= 0.4.0 format)
# ========================================
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "data",
    "models",
    "experiments",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
